tests/build/fail/property/capture_only_invalid_return_type.stderr
error: capture_only properties must have return type `!`
 --> $DIR/capture_only_invalid_return_type.rs:4:40
  |
4 | pub fn invalid_return1(input: bool) -> bool {
  |                                        ^^^^

error: capture_only properties must have return type `!`
 --> $DIR/capture_only_invalid_return_type.rs:9:47
  |
9 | pub fn invalid_return2(input: impl UiNode) -> impl UiNode {
  |                                               ^^^^

error: capture_only properties must have return type `-> !`
  --> $DIR/capture_only_invalid_return_type.rs:13:12
   |
13 | #[property(capture_only, allowed_in_when = false)]
   |            ^^^^^^^^^^^^
